--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -131,20 +131,23 @@
 .show_wrap .show_box .show_img .img_box{height:350px;position:relative;}
 .show_wrap .show_box .show_img .store_promotion{height:250px;}
 .show_wrap .show_box .show_img .img_box img{width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;border-radius:15px;}
+.show_wrap .show_box .show_img .img_box img.cover{object-fit:cover;}
 .show_wrap .show_box .show_img .deal_img_box img{width:80%;height:80%;}
 .show_wrap .show_box .show_img .store_imgbox{height:250px;position:relative;width:250px;}
 .show_wrap .show_box .show_img .store_imgbox img{width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-15%, -50%);object-fit:contain;}
 .show_wrap .show_box .show_img button img{width:40px;position:absolute;top:0;left:0;}
 .show_wrap .show_box .show_inner{float:left;width:48%;margin: 4% 0 10% 2%;}
+.show_wrap .show_box .show_inner .show_in_box{margin-top:20px;}
 .show_wrap .show_box .show_inner h2{font-size:30px;}
 .show_wrap .show_box .show_inner h2 a{text-decoration:none;color:#000;background:none;padding:0;line-height:1.1;}
 .show_wrap .show_box .show_inner h2 a:hover{text-decoration:underline;}
 .show_wrap .show_box .show_inner strong{text-transform:uppercase;font-size:17px;color:#616161;letter-spacing:5px;border-bottom:1px solid #616161;font-weight:400;}
 .show_wrap .show_box .show_inner span{}
 .show_wrap .show_box .show_inner span p{font-size:15px;font-weight:100;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
-.show_wrap .show_box .show_inner p{margin:20px 0;font-size:30px;}
+.show_wrap .show_box .show_inner p{margin-top:20px;font-size:30px;}
 .show_wrap .show_box .show_inner a{color:#fff;background:#000;padding:15px 30px;display:inline-block;border-radius:30px;}
 .show_wrap .show_box .show_inner a em{color:#e47911;}
+.show_wrap .show_box .show_inner .m_btn{margin-top:20px;}
 .show_wrap .show_box .show_inner .promocode_btn a{border-radius:0.1875rem;}
 .show_wrap .show_box .show_inner .only_show a em{color:#e47911;text-transform:uppercase;}
 .show_wrap .show_box .show_inner .trix{display:block;margin-top:10px;}
@@ -152,12 +155,13 @@
 .show_wrap .show_box .show_inner .trix ul li{list-style:disc;}
 .show_wrap .show_box .show_inner .keyword{display:none;}
 .show_wrap .show_box .show_inner .about{font-size:20px;border-bottom:1px solid #ccc;display:block;margin-top:25px;}
+.show_wrap .show_box .show_inner .learn_more{text-align:center;margin-top:30px;}
 
 .show_wrap .show_box_down{width:1000px;margin:60px auto 0 auto;}
 .show_wrap .show_box_down h2{margin:0 0 1% 1%;border-bottom:1px solid #616161;width:200px;}
 .show_wrap .show_box_down .sbd_box{float:left;width:23%;margin:0 1%;}
 .show_wrap .show_box_down .sbd_box .down_img{width:100%;height:200px;}
-.show_wrap .show_box_down .sbd_box .down_img img{width:100%;height:100%;object-fit:cover;}
+.show_wrap .show_box_down .sbd_box .down_img img{width:100%;height:100%;object-fit:cover;border-radius:20px;}
 .show_wrap .show_box_down .sbd_box .down_inner{padding:5px;}
 .show_wrap .show_box_down .sbd_box .down_inner p{}
 .show_wrap .show_box_down .sbd_box .down_inner p a{text-decoration:none;color:#616161;}
