--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -10,9 +10,9 @@
       </div>
       
       <!-- <div class="cateogry_box">
-        <a href="/blogs/gadget_test">
-          <img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
-          <div class="centered">Test</div>
+        <a href="Category_URL">
+          <img src="Image_URL">
+          <div class="centered">Category_Title</div>
         </a>
       </div> -->
 
@@ -71,6 +71,14 @@
           <div class="centered">FASHION</div>
         </a>
       </div>
+
+      <div class="cateogry_box">
+        <a href="/gadgets?category=Pet+Gadgets">
+          <img src="https://images.unsplash.com/photo-1573435567032-ff5982925350?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80">
+          <div class="centered">PET GADGETS</div>
+        </a>
+      </div>
+
     </div>
   </div>
 </div>
