--- a/app/views/hotdeals/_usa_ver2.html.erb
+++ b/app/views/hotdeals/_usa_ver2.html.erb
@@ -42,7 +42,7 @@
       <span>
         <ul>
           <li>Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime.<i></i></a></li>
-          <li>Average rating and reviews may change after posted.</li>
+          <li>Average ratings and reviews may change after posting.</li>
         </ul>
       </span>
     </div> 
@@ -77,7 +77,7 @@
         <% end %>
       </div>
       <div class="box line_three">
-        <p>Price Drops</p>
+        <p>Price dropped</p>
         <em>
           <% if @hotdeal.h_spare_45.present? %>
             <% running_total = 0 %>
@@ -122,10 +122,10 @@
       <span>
         <ul>
           <% if @hotdeal.h_spare_02.present? %>
-            <li>Check coupon on detail page to receive your extra savings.</li>
+            <li>Check the box for the coupon on the detail page to receive your extra savings.</li>
           <% end %>
           <% if @hotdeal.h_spare_45.present? %>
-            <li>Price dropped compare to last posted.</li>
+            <li>Price dropped more compared to the last post.</li>
           <% end %>
         </ul>
       </span>
