--- a/app/views/promocodes/_usa_ver2.html.erb
+++ b/app/views/promocodes/_usa_ver2.html.erb
@@ -41,7 +41,7 @@
       <span>
         <ul>
           <li>Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime<i></i></a></li>      
-          <li>Average rating and reviews may change after posted.</li>
+          <li>Average ratings and reviews may change after posting.</li>
         <ul>
       </span>
     </div>
@@ -77,10 +77,10 @@
         <span>
           <ul>
             <% if @promocode.p_coupon_deal.present? %>
-              <li>Check the box for coupon on detail page to receive your extra savings.</li>
+              <li>Check the box for the coupon on the detail page to receive your extra savings.</li>
             <% end %>
             <% if @promocode.p_extra_deal.present? %>
-              <li>This item is on sale now and get extra discount via promo code.</li>
+              <li>This item is on sale now and gets an extra discount via promo code.</li>
             <% end %>
           </ul>
         </span>
