--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -21,7 +21,7 @@
       
       <div class="rt_cnt">
         <h2>Take a good items you love at the best price.<% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'New Hotdeal', new_hotdeal_path %></div><% end %></h2>
-        <%= render 'deals_days/note_wadiz' %>
+        <p class="deals_description">Check out the latest Amazon deals featuring hand-picked deals with low prices on top products updated daily. We update these awesome deals every single day so come back again for more savings!</p>
         <%= render 'shared/amz_search' %>
 
         <%= render 'shared/amz_slider' %>
