--- a/app/views/promocodes/_promocode.html.erb
+++ b/app/views/promocodes/_promocode.html.erb
@@ -12,7 +12,7 @@
           <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
         <% end %>
       </div>
-        <div class="expried_wrap"><div class="mark term exprie"><p>EXPIRED</p></div></div>
+        <div class="expried_wrap"><div class="mark term exprie"><p>Expired</p></div></div>
      </div>
     <% else %>
      <div class="image_box">
