--- a/app/views/shared/_amz_slider.html.erb
+++ b/app/views/shared/_amz_slider.html.erb
@@ -3,6 +3,12 @@
 
     <!-- <div class="img_box"><a target="_blank" href="Page_Link"><img class="item" src="Image_URL"><p>About_This</p></a></div> -->
 
+    <div class="img_box"><a target="_blank" href="https://amzn.to/39bqTKf"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/61hjhdniQRL._AC_SR300,300_.jpg"><p>Buy 1, get 1 free | Health, Household & Baby Care itmes</p></a></div>
+
+    <div class="img_box"><a target="_blank" href="https://amzn.to/2Qkn5xx"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/51mVyQRzHiL._AC_US160_.jpg"><p>Save up to 35% on sports team ugly sweaters</p></a></div>
+
+    <div class="img_box"><a target="_blank" href="https://amzn.to/2rshKvP"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/71TSinb4usL._AC_SR300,300_.jpg"><p>Save up to 48% on Nikon products this holiday season!</p></a></div>
+
     <div class="img_box"><a target="_blank" href="https://amzn.to/2Z5Tlsa"><img class="item" src="https://i.pinimg.com/564x/82/e1/79/82e179361ff44075d5e43ccec07112c8.jpg"><p>Find Christmas Gifts on Amazon</p></a></div>
 
     <div class="img_box"><a target="_blank" href="https://amzn.to/38ZGqfQ"><img class="item" src="https://images-na.ssl-images-amazon.com/images/I/61jiXeUPtjL._AC_SX569_.jpg"><p>Dyson | Save up to 42% off on vacuums, airpurifiers & more</p></a></div>
