--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -60,7 +60,7 @@
                     <em class="code_em">
                       <% if @storepromotion.sp_spare_60 < DateTime.now %>
                       <% @storepromotion.sp_spare_60 %>
-                        <em class="expired">EXPIRED</em>
+                        <em class="expired">Expired</em>
                       <% else %>
                         <% if @storepromotion.sp_spare_61 <= DateTime.now %>
                         <% @storepromotion.sp_spare_61 %>
@@ -79,7 +79,7 @@
                    <!-- <em>* Pricing may change and deals can expire fast.</em> -->
                     <% if @storepromotion.sp_spare_60 < DateTime.now %>
                     <% @storepromotion.sp_spare_60 %>
-                      <em class="expired">EXPIRED</em>
+                      <em class="expired">Expired</em>
                     <% else %>
                      <% if @storepromotion.sp_spare_61 <= DateTime.now %>
                       <% @storepromotion.sp_spare_61 %>
