--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -172,6 +172,8 @@
 .deals_card .image_box .mark{position:absolute;top:5px;left:5px;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;border-radius:10px;}
 .deals_card .image_box .mark span{letter-spacing:3.1px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
+.deals_card .image_box .dropped{top:55px;}
+.deals_card .image_box .dropped em{font-size:10px;}
 .deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
 .deals_card .image_box .term p{margin-top:7px;font-size:11px;}
 .deals_card .image_box .exprie{background:#ff4d4d;}
