--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -31,7 +31,7 @@
          <% if promocode.p_spare_50.present? %>
           <% if promocode.p_spare_50 < DateTime.now %>
           <% promocode.p_spare_50 %>
-            <em class="expired">EXPIRED</em>
+            <em class="expired">Expired</em>
           <% else %>
 
           <% if promocode.p_spare_51.present? %>
